# rhinomcp

./: .gitignore  .gitmodules  LICENSE  README.md
demo_chats/: create_5x5x5_boxes.txt  create_6x6x6_boxes.txt  create_rhinoceros_lego_blocks
rhino_mcp/: .gitignore  main.py  pyproject.toml
rhino_mcp_server/: dev.sh  pyproject.toml  requirements-test.txt  test_framework_foundation.py  test_notification_mixin.py  test_server_integration.py  test_transport_manager.py
rhino_mcp_server/src/mcp_notifications/: __init__.py  base_notifier.py  mixins.py  models.py  transport_manager.py
rhino_mcp_server/src/rhinomcp/: __init__.py  event_processor.py  server.py
rhino_mcp_server/src/rhinomcp/prompts/: assert_general_strategy.py
rhino_mcp_server/src/rhinomcp/resources/: rhinoscriptsyntax_resource.py
rhino_mcp_server/src/rhinomcp/static/: rhinoscriptsyntax.py
rhino_mcp_server/src/rhinomcp/tools/: create_layer.py  create_object.py  create_objects.py  delete_layer.py  delete_object.py  execute_rhinoscript_python_code.py  get_document_info.py  get_object_info.py  get_or_set_current_layer.py  get_rhinoscript_python_code_guide.py  get_rhinoscript_python_function_names.py  get_selected_objects_info.py  modify_object.py  modify_objects.py  select_objects.py
rhino_mcp_server/static/: application.py  curve.py  dimension.py  geometry.py  object.py  pointvector.py  rhinoscriptsyntax.json  selection.py  transformation.py  utility.py
rhino_mcp_server/tests/: _test_integration.py  conftest.py  test_event_processor.py  test_logging.py  test_rhino_connection.py  test_tool_event.py
(+57 files in other folders)
