[project]
name = "rhinomcp"
version = "0.1.2.1"
description = "Rhino integration through the Model Context Protocol"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Jingcheng Chen", email = "mail@jchen.ch"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.3.0",
]

[project.scripts]
rhinomcp = "rhinomcp.server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}


[project.urls]
"Homepage" = "https://github.com/jingcheng-chen/rhinomcp"
"Bug Tracker" = "https://github.com/jingcheng-chen/rhinomcp/issues"
